assets/stylesheets/mobile/mobile.scss
.full-page-chat {
  grid-template-columns: 100%;
  overflow-x: hidden;
  width: 100%;

  &.showing-channels {
    .tc-live-pane {
      display: none;
    }
  }

  .tc-full-page-header {
    padding: 0.25em 1em;
  }

  .tc-channels,
  .tc-live-pane {
    border-radius: 0px;
  }

  .tc-channels {
    border: none;
    border-top: 1px solid var(--primary-low);
    height: calc(100% - 1px);
    background-color: var(--primary-very-low);
  }
}

.tc-live-pane .tc-composer .tc-composer-row {
  .tc-composer-input {
    padding-right: 75px;
  }
  .open-toolbar-btn {
    right: 50px;
  }

  .mobile-send-btn {
    position: absolute;
    padding: 10px;
    right: 12px;
    top: 50%;
    transform: translateY(-50%);
    &:not([disabled]) .d-icon {
      color: var(--tertiary);
    }
  }
}

.tc-composer-uploads-container {
  padding: 0.25em 0.75em;
}

.tc-message:not(.user-info-hidden) {
  padding: 0.25em 1em 0.1em;
  margin-top: 0.5em;

  .tc-message-container {
    max-width: calc(100% - (var(--small-message-left-width) + 1em));

    .tc-text {
      width: 100%;
    }
  }
}

.tc-message.user-info-hidden {
  padding: 0.1em 1em;

  .tc-message-container {
    width: 100%;

    .tc-text {
      max-width: calc(100% - (var(--small-message-left-width) + 1em));
    }
  }
}

.tc-messages-container {
  .tc-message-deleted {
    margin-left: calc(var(--small-message-left-width) + 1em);
  }
}

body.has-full-page-chat .footer-nav {
  display: none !important;
}

body.has-full-page-chat {
  background-color: var(--primary-very-low);
  #main-outlet {
    padding: 0;
  }
}

.chat-channel-settings-modal .modal-inner-container {
  max-width: 90vw;
  .chat-channel-settings-row {
    max-width: 100%;
    .chat-channel-expand-settings {
      .d-icon {
        margin-right: 0;
      }
      .d-button-label {
        display: none;
      }
    }
    .chat-channel-preview {
      display: none;
    }
    .chat-channel-title {
      max-width: 80%;
    }
    .controls.save-container {
      justify-content: end;
    }
  }
}

.full-page-chat {
  .tc-drawer {
    width: 100%;
  }
  .tc-live-pane {
    padding: 0;
  }
  .tc-full-page-header {
    background-color: var(--secondary);
  }
  .tc-composer {
    background-color: var(--primary-very-low);
  }
  .tc-channels {
    font-weight: 500;
    background-color: var(--secondary);
    .topic-chat-badge {
      .d-icon {
        background-color: var(--secondary);
      }
    }
  }
  .tc-full-page-header {
    padding: 0.5em 1em;
    font-weight: bold;
  }
  .tc-channels .chat-channel-row .category-chat-private .d-icon {
    background-color: var(--secondary);
  }
  .chat-channel-row .chat-unread-indicator,
  .chat-channel-row .chat-unread-urgent-indicator {
    width: 6px;
    height: 6px;
    left: 5px;
    top: calc(50% - 3px);
  }
}

.sidebar-container .tc-channels .chat-channel-divider {
  padding-left: 1em;
}

